welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
 	var aMettre = 0
  var i = 2
  var limite :Int  = 2
  
  var T = new Array[Int](num);
for (i <- 0 to T.length-1) {
  T(0) = 1
  T(1) =2
  T(2)=2
}
  while (T(num) == 0)
  		{
        aMettre = T(i)
        for (i <- limite to limite + aMettre )
        {T(i) = i + 1}
        limite = limite + aMettre
        i = i + 1 
				        
      }
  
  
  }